--- a/src/components/HomePage/Bio/Bio.module.css
+++ b/src/components/HomePage/Bio/Bio.module.css
@@ -1,10 +1,11 @@
 .bioSection {
   display: flex;
-  justify-content: space-around; /* Adjust as needed */
-  align-items: stretch; /* Vertically align items in the center */
+  justify-content: space-around; 
+  align-items: stretch; 
   padding: 0.5rem; /* Adjust padding as needed */
   max-width: 1200px; /* Optional: Limit the width of the section */
-  margin: 0 ; /* Center the section horizontally */
+  margin: 4rem 23rem 0 15rem;
+
 }
 
 .column {
@@ -18,6 +19,7 @@
   padding: 0;
   margin-top: 0;
   margin-right: 1rem;
+  font-size: 19px;
 }
 
 .scrollIcon {
